--- a/index.html
+++ b/index.html
@@ -40,6 +40,27 @@
             width: 100%;
             max-width: 1000px;
         }
+        .tables-container {
+            display: flex;
+            justify-content: space-between;
+        }
+        .table-wrapper {
+            width: 48%;
+        }
+        table {
+            width: 100%;
+            border-collapse: collapse;
+        }
+        table, th, td {
+            border: 1px solid #ddd;
+        }
+        th, td {
+            padding: 8px;
+            text-align: left;
+        }
+        th {
+            background-color: #f2f2f2;
+        }
     </style>
 </head>
 <body>
@@ -96,13 +117,12 @@
         <h2>Wykres dziennego zużycia gazu i prądu (przefiltrowane)</h2>
         <canvas id="filteredDailyUsageChart"></canvas>
 
-        <!-- Table for exporting -->
+        <!-- Tables for exporting -->
         <h2>Tabela zużycia</h2>
-        <div id="dataTable"></div>
-
-        <!-- Table for filtered data -->
-        <h2>Tabela zużycia (przefiltrowane)</h2>
-        <div id="filteredDataTable"></div>
+        <div class="tables-container">
+            <div class="table-wrapper" id="dataTable"></div>
+            <div class="table-wrapper" id="filteredDataTable"></div>
+        </div>
     </div>
 
     <script>
@@ -282,9 +302,16 @@
                 return;
             }
 
-            let tableHTML = '<table border="1"><thead><tr><th>Data</th><th>Zużycie gazu</th><th>Zużycie prądu</th></tr></thead><tbody>';
-            data.forEach(entry => {
-                tableHTML += `<tr><td>${entry.date}</td><td>${entry.gas}</td><td>${entry.electricity}</td></tr>`;
+            let tableHTML = '<table><thead><tr><th>Data</th><th>Zużycie gazu</th><th>Zużycie prądu</th><th>Dzienne zużycie gazu</th><th>Dzienne zużycie prądu</th></tr></thead><tbody>';
+            let prevGas = 0;
+            let prevElectricity = 0;
+
+            data.forEach((entry, index) => {
+                const dailyGas = index > 0 ? (entry.gas - data[index - 1].gas) : 0;
+                const dailyElectricity = index > 0 ? (entry.electricity - data[index - 1].electricity) : 0;
+                tableHTML += `<tr><td>${entry.date}</td><td>${entry.gas}</td><td>${entry.electricity}</td><td>${dailyGas}</td><td>${dailyElectricity}</td></tr>`;
+                prevGas = entry.gas;
+                prevElectricity = entry.electricity;
             });
             tableHTML += '</tbody></table>';
 
@@ -415,7 +442,6 @@
 
         function exportToPDF() {
             const doc = new jsPDF();
-
             doc.text("Tabela zużycia", 10, 10);
 
             const table = document.querySelector('#dataTable table');
