--- a/index.html
+++ b/index.html
@@ -9,59 +9,60 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/jspdf"></script>
     <script src="https://cdn.jsdelivr.net/npm/jspdf-autotable"></script>
-    <style>
-         body {
-            font-family: Arial, sans-serif;
-        }
-        .container {
-            max-width: 1000px;
-            margin: 0 auto;
-        }
-        .form-group {
-            margin-bottom: 1em;
-        }
-        label {
-            display: block;
-            margin-bottom: 0.5em;
-        }
-        input, button {
-            width: 100%;
-            padding: 0.5em;
-            margin-bottom: 1em;
-        }
-        button {
-            padding: 0.5em 1em;
-        }
-        .buttons {
-            display: flex;
-            justify-content: space-between;
-        }
-        canvas {
-            width: 100%;
-            max-width: 1000px;
-        }
-        .tables-container {
-            display: flex;
-            justify-content: space-between;
-        }
-        .table-wrapper {
-            width: 48%;
-        }
-        table {
-            width: 100%;
-            border-collapse: collapse;
-        }
-        table, th, td {
-            border: 1px solid #ddd;
-        }
-        th, td {
-            padding: 8px;
-            text-align: left;
-        }
-        th {
-            background-color: #f2f2f2;
-        }
-    </style>
+   <style>
+    body {
+        font-family: Arial, sans-serif;
+    }
+    .container {
+        max-width: 1000px;
+        margin: 0 auto;
+    }
+    .form-group {
+        margin-bottom: 1em;
+    }
+    label {
+        display: block;
+        margin-bottom: 0.5em;
+    }
+    input, button {
+        width: 100%;
+        padding: 0.5em;
+        margin-bottom: 1em;
+    }
+    button {
+        padding: 0.5em 1em;
+    }
+    .buttons {
+        display: flex;
+        justify-content: space-between;
+    }
+    canvas {
+        width: 100%;
+        max-width: 1000px;
+    }
+    .tables-container {
+        display: flex;
+        justify-content: space-between;
+    }
+    .table-wrapper {
+        width: 48%;
+    }
+    table {
+        width: 100%;
+        border-collapse: collapse;
+    }
+    table, th, td {
+        border: 1px solid #ddd;
+    }
+    th, td {
+        padding: 8px;
+        text-align: left;
+        font-size: 12px; /* Zmniejsza czcionkę w tabeli */
+    }
+    th {
+        background-color: #f2f2f2;
+    }
+</style>
 </head>
 <body>
     <div class="container">
