--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/jspdf"></script>
     <script src="https://cdn.jsdelivr.net/npm/jspdf-autotable"></script>
-   <style>
+ <style>
     body {
         font-family: Arial, sans-serif;
     }
@@ -58,11 +58,13 @@
         padding: 8px;
         text-align: left;
         font-size: 12px; /* Zmniejsza czcionkę w tabeli */
+        white-space: nowrap; /* Zapobiega zawijaniu tekstu */
     }
     th {
         background-color: #f2f2f2;
     }
 </style>
+
 </head>
 <body>
     <div class="container">
