--- a/index.html
+++ b/index.html
@@ -444,21 +444,64 @@
         }
 
         function exportToPDF() {
-            const doc = new jsPDF();
-            doc.text("Tabela zużycia", 10, 10);
+    const doc = new jsPDF();
+    let yOffset = 10;
 
-            const table = document.querySelector('#dataTable table');
-            if (table) {
-                html2canvas(table).then(canvas => {
-                    const imgData = canvas.toDataURL('image/png');
-                    doc.addImage(imgData, 'PNG', 10, 20, 190, 0);
-                    doc.save('zuzycie.pdf');
-                });
-            } else {
-                doc.text("Brak danych do eksportu.", 10, 20);
-                doc.save('zuzycie.pdf');
-            }
+    // Dodaj tytuł do pliku PDF
+    doc.text("Przefiltrowane dane zużycia gazu i prądu", 10, yOffset);
+    yOffset += 10;
+
+    // Eksportuj wykresy do PDF
+    const charts = [
+        { id: 'filteredUsageChart', title: 'Wykres zużycia gazu i prądu (przefiltrowane)' },
+        { id: 'filteredDailyUsageChart', title: 'Wykres dziennego zużycia gazu i prądu (przefiltrowane)' }
+    ];
+
+    let promiseChain = Promise.resolve();
+
+    charts.forEach(chart => {
+        promiseChain = promiseChain.then(() => {
+            return new Promise((resolve) => {
+                const canvas = document.getElementById(chart.id);
+                if (canvas) {
+                    doc.text(chart.title, 10, yOffset);
+                    yOffset += 10;
+                    html2canvas(canvas).then(function (canvas) {
+                        const imgData = canvas.toDataURL('image/png');
+                        const imgWidth = 190;
+                        const imgHeight = canvas.height * imgWidth / canvas.width;
+                        doc.addImage(imgData, 'PNG', 10, yOffset, imgWidth, imgHeight);
+                        yOffset += imgHeight + 10;
+                        resolve();
+                    });
+                } else {
+                    resolve();
+                }
+            });
+        });
+    });
+
+    // Eksportuj tabelę do PDF
+    promiseChain = promiseChain.then(() => {
+        doc.text("Tabela przefiltrowanych danych", 10, yOffset);
+        yOffset += 10;
+
+        const table = document.querySelector('#filteredDataTable table');
+        if (table) {
+            return html2canvas(table).then(canvas => {
+                const imgData = canvas.toDataURL('image/png');
+                const imgWidth = 190;
+                const imgHeight = canvas.height * imgWidth / canvas.width;
+                doc.addImage(imgData, 'PNG', 10, yOffset, imgWidth, imgHeight);
+                doc.save('przefiltrowane_dane.pdf');
+            });
+        } else {
+            doc.text("Brak przefiltrowanych danych do eksportu.", 10, yOffset);
+            doc.save('przefiltrowane_dane.pdf');
         }
+    });
+}
+
 
         window.onload = updateCharts;
     </script>
