--- a/index.html
+++ b/index.html
@@ -12,6 +12,14 @@
      <style>
     body {
         font-family: Arial, sans-serif;
+        height: 100%;
+            margin: 0;
+            padding: 0;
+            font-family: Arial, sans-serif;
+            color: black;
+            overflow: hidden;
+            background: url('https://github.com/MikolajEbicom/Monitory-Ebicom/blob/main/unnamed.png?raw=true') no-repeat center center;
+            background-size: 33%
     }
     .container {
         max-width: 1000px;
