--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             padding: 0;
             font-family: Arial, sans-serif;
             color: black;
-            background: url('https://github.com/MikolajEbicom/Monitory-Ebicom/blob/main/unnamed.png?raw=true') no-repeat center center;
+            background: url('https://github.com/car0tek/liczniki/blob/main/DJI_0636.JPG') repeat center center;
             background-size: 33%
     }
     .container {
