--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
             padding: 0;
             font-family: Arial, sans-serif;
             color: black;
-            background: url('https://github.com/car0tek/liczniki/blob/main/DJI_0636.JPG') no-repeat center center;
-            background-size: 33%
+            backgroundcolor: #add8e6
     }
     .container {
         max-width: 1000px;
