--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             padding: 0;
             font-family: Arial, sans-serif;
             color: black;
-            background-color: #add8e6
+            background-color: #add8d6
     }
     .container {
         max-width: 1000px;
