--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <font size=5> <span style="color: #ffffff"> Monitorowanie zużycia gazu oraz prądu </span> </font>
+    <center>Monitorowanie zużycia gazu i prądu</center>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/xlsx/dist/xlsx.full.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
@@ -73,6 +73,9 @@
 
 </head>
 <body>
+    <div class="container">
+        <h1>Monitorowanie zużycia gazu i prądu</h1>
+        
         <!-- Data input form -->
         <div class="form-group">
             <label for="date">Data:</label>
