--- a/index.html
+++ b/index.html
@@ -3,77 +3,77 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Monitorowanie zużycia gazu i prądu</title>
+    <font size=5> <span style="color: #ffffff"> Monitorowanie zużycia gazu oraz prądu </span> </font>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/xlsx/dist/xlsx.full.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/jspdf"></script>
     <script src="https://cdn.jsdelivr.net/npm/jspdf-autotable"></script>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
+     <style>
+    body {
+        font-family: Arial, sans-serif;
+        height: 100%;
             margin: 0;
             padding: 0;
+            font-family: Arial, sans-serif;
             color: black;
             background-color: #8794a6;
-        }
-        .container {
-            max-width: 1000px;
-            margin: 0 auto;
-        }
-        .form-group {
-            margin-bottom: 1em;
-        }
-        label {
-            display: block;
-            margin-bottom: 0.5em;
-        }
-        input, button {
-            width: 100%;
-            padding: 0.5em;
-            margin-bottom: 1em;
-        }
-        button {
-            padding: 0.5em 1em;
-        }
-        .buttons {
-            display: flex;
-            justify-content: space-between;
-        }
-        canvas {
-            width: 100%;
-            max-width: 1000px;
-        }
-        .tables-container {
-            display: flex;
-            justify-content: space-between;
-        }
-        .table-wrapper {
-            width: 48%;
-        }
-        table {
-            width: 100%;
-            border-collapse: collapse;
-        }
-        table, th, td {
-            border: 1px solid #ddd;
-        }
-        th, td {
-            padding: 6px;
-            text-align: left;
-            font-size: 11px;
-            white-space: nowrap;
-        }
-        th {
-            background-color: #f2f2f2;
-        }
+    }
+    .container {
+        max-width: 1000px;
+        margin: 0 auto;
+    }
+    .form-group {
+        margin-bottom: 1em;
+    }
+    label {
+        display: block;
+        margin-bottom: 0.5em;
+    }
+    input, button {
+        width: 100%;
+        padding: 0.5em;
+        margin-bottom: 1em;
+    }
+    button {
+        padding: 0.5em 1em;
+    }
+    .buttons {
+        display: flex;
+        justify-content: space-between;
+    }
+    canvas {
+        width: 100%;
+        max-width: 1000px;
+    }
+    .tables-container {
+        display: flex;
+        justify-content: space-between;
+    }
+    .table-wrapper {
+        width: 48%;
+    }
+    table {
+        width: 100%;
+        border-collapse: collapse;
+    }
+    table, th, td {
+        border: 1px solid #ddd;
+    }
+    th, td {
+        padding: 6px;
+        text-align: left;
+        font-size: 11px; /* Zmniejsza czcionkę w tabeli */
+        white-space: nowrap; /* Zapobiega zawijaniu tekstu */
+    }
+    th {
+        background-color: #f2f2f2;
+    }
     </style>
+
 </head>
 <body>
-    <div class="container">
-        <h1>Monitorowanie zużycia gazu i prądu</h1>
-
-        <!-- Formularz wprowadzania danych -->
+        <!-- Data input form -->
         <div class="form-group">
             <label for="date">Data:</label>
             <input type="date" id="date">
@@ -92,11 +92,11 @@
             <button onclick="clearData()">Wyczyść dane</button>
         </div>
 
-        <!-- Import z Excela -->
+        <!-- Excel file input -->
         <h2>Importuj dane z Excela</h2>
         <input type="file" id="fileInput" accept=".xlsx" />
 
-        <!-- Zakres dat -->
+        <!-- Date range input -->
         <h2>Filtruj dane w zakresie dat</h2>
         <div class="form-group">
             <label for="startDate">Data początkowa:</label>
@@ -109,21 +109,21 @@
         <button onclick="filterAndUpdateCharts()">Filtruj dane</button>
         <button onclick="exportToPDF()">Eksportuj do PDF</button>
 
-        <!-- Wykresy -->
+        <!-- Charts -->
         <h2>Wykres zużycia gazu i prądu</h2>
         <canvas id="usageChart"></canvas>
 
         <h2>Wykres dziennego zużycia gazu i prądu</h2>
         <canvas id="dailyUsageChart"></canvas>
 
-        <!-- Przefiltrowane wykresy -->
+        <!-- Additional charts for filtered data -->
         <h2>Wykres zużycia gazu i prądu (przefiltrowane)</h2>
         <canvas id="filteredUsageChart"></canvas>
 
         <h2>Wykres dziennego zużycia gazu i prądu (przefiltrowane)</h2>
         <canvas id="filteredDailyUsageChart"></canvas>
 
-        <!-- Tabele -->
+        <!-- Tables for exporting -->
         <h2>Tabela zużycia</h2>
         <div class="tables-container">
             <div class="table-wrapper" id="dataTable"></div>
@@ -132,8 +132,10 @@
     </div>
 
     <script>
-        // Zmienne globalne dla wykresów
-        let usageChart, dailyUsageChart, filteredUsageChart, filteredDailyUsageChart;
+        function excelDateToJSDate(excelDate) {
+            const date = new Date((excelDate - 25569) * 86400 * 1000);
+            return date.toISOString().split('T')[0];
+        }
 
         function saveData() {
             const date = document.getElementById('date').value;
@@ -224,11 +226,8 @@
                 dailyElectricityUsage.push(electricityData[i] - electricityData[i - 1]);
             }
 
-            if (usageChart) usageChart.destroy();
-            if (dailyUsageChart) dailyUsageChart.destroy();
-
             const usageChartCtx = document.getElementById('usageChart').getContext('2d');
-            usageChart = new Chart(usageChartCtx, {
+            new Chart(usageChartCtx, {
                 type: 'line',
                 data: {
                     labels: labels,
@@ -244,6 +243,188 @@
                             label: 'Zużycie prądu',
                             data: electricityData,
                             borderColor: 'rgba(54, 162, 235, 1)',
+                            backgroundColor: 'rgba(54, 162, 235, 0.2)',
+                            fill: true,
+                        }
+                    ]
+                },
+                options: {
+                    responsive: true,
+                    scales: {
+                        y: {
+                            beginAtZero: true
+                        },
+                        x: {
+                            display: true
+                        }
+                    }
+                }
+            });
+
+            const dailyUsageChartCtx = document.getElementById('dailyUsageChart').getContext('2d');
+            new Chart(dailyUsageChartCtx, {
+                type: 'line',
+                data: {
+                    labels: labels.slice(1),
+                    datasets: [
+                        {
+                            label: 'Dzienne zużycie gazu',
+                            data: dailyGasUsage,
+                            borderColor: 'rgba(255, 159, 64, 1)',
+                            backgroundColor: 'rgba(255, 159, 64, 0.2)',
+                            fill: true,
+                        },
+                        {
+                            label: 'Dzienne zużycie prądu',
+                            data: dailyElectricityUsage,
+                            borderColor: 'rgba(75, 192, 192, 1)',
+                            backgroundColor: 'rgba(75, 192, 192, 0.2)',
+                            fill: true,
+                        }
+                    ]
+                },
+                options: {
+                    responsive: true,
+                    scales: {
+                        y: {
+                            beginAtZero: true
+                        },
+                        x: {
+                            display: true
+                        }
+                    }
+                }
+            });
+
+            updateTable(data, 'dataTable');
+        }
+
+        function updateTable(data, tableId) {
+            const table = document.getElementById(tableId);
+            table.innerHTML = '';
+
+            if (data.length === 0) {
+                table.innerHTML = '<p>Brak danych do wyświetlenia.</p>';
+                return;
+            }
+
+            let tableHTML = '<table><thead><tr><th>Data</th><th>Zużycie gazu</th><th>Zużycie prądu</th><th>Dzienne zużycie gazu</th><th>Dzienne zużycie prądu</th></tr></thead><tbody>';
+            let prevGas = 0;
+            let prevElectricity = 0;
+
+            data.forEach((entry, index) => {
+                const dailyGas = index > 0 ? (entry.gas - data[index - 1].gas) : 0;
+                const dailyElectricity = index > 0 ? (entry.electricity - data[index - 1].electricity) : 0;
+                tableHTML += `<tr><td>${entry.date}</td><td>${entry.gas}</td><td>${entry.electricity}</td><td>${dailyGas}</td><td>${dailyElectricity}</td></tr>`;
+                prevGas = entry.gas;
+                prevElectricity = entry.electricity;
+            });
+            tableHTML += '</tbody></table>';
+
+            table.innerHTML = tableHTML;
+        }
+
+        function filterAndUpdateCharts() {
+            const startDate = document.getElementById('startDate').value;
+            const endDate = document.getElementById('endDate').value;
+
+            if (!startDate || !endDate) {
+                alert("Wprowadź poprawny zakres dat.");
+                return;
+            }
+
+            const data = JSON.parse(localStorage.getItem('usageData')) || [];
+            const filteredData = data.filter(entry => entry.date >= startDate && entry.date <= endDate);
+
+            if (filteredData.length === 0) {
+                alert("Brak danych w wybranym zakresie dat.");
+                return;
+            }
+
+            const allDates = Array.from(new Set(filteredData.map(entry => entry.date))).sort();
+            const dataMap = new Map(filteredData.map(entry => [entry.date, { gas: entry.gas, electricity: entry.electricity }]));
+
+            const gasData = [];
+            const electricityData = [];
+            const labels = [];
+
+            let prevGas = 0;
+            let prevElectricity = 0;
+
+            allDates.forEach(date => {
+                labels.push(date);
+                if (dataMap.has(date)) {
+                    const { gas, electricity } = dataMap.get(date);
+                    gasData.push(gas);
+                    electricityData.push(electricity);
+                    prevGas = gas;
+                    prevElectricity = electricity;
+                } else {
+                    gasData.push(prevGas);
+                    electricityData.push(prevElectricity);
+                }
+            });
+
+            const dailyGasUsage = [];
+            const dailyElectricityUsage = [];
+
+            for (let i = 1; i < gasData.length; i++) {
+                dailyGasUsage.push(gasData[i] - gasData[i - 1]);
+                dailyElectricityUsage.push(electricityData[i] - electricityData[i - 1]);
+            }
+
+            const filteredUsageChartCtx = document.getElementById('filteredUsageChart').getContext('2d');
+            new Chart(filteredUsageChartCtx, {
+                type: 'line',
+                data: {
+                    labels: labels,
+                    datasets: [
+                        {
+                            label: 'Zużycie gazu (przefiltrowane)',
+                            data: gasData,
+                            borderColor: 'rgba(255, 99, 132, 1)',
+                            backgroundColor: 'rgba(255, 99, 132, 0.2)',
+                            fill: true,
+                        },
+                        {
+                            label: 'Zużycie prądu (przefiltrowane)',
+                            data: electricityData,
+                            borderColor: 'rgba(54, 162, 235, 1)',
+                            backgroundColor: 'rgba(54, 162, 235, 0.2)',
+                            fill: true,
+                        }
+                    ]
+                },
+                options: {
+                    responsive: true,
+                    scales: {
+                        y: {
+                            beginAtZero: true
+                        },
+                        x: {
+                            display: true
+                        }
+                    }
+                }
+            });
+
+            const filteredDailyUsageChartCtx = document.getElementById('filteredDailyUsageChart').getContext('2d');
+            new Chart(filteredDailyUsageChartCtx, {
+                type: 'line',
+                data: {
+                    labels: labels.slice(1),
+                    datasets: [
+                        {
+                            label: 'Dzienne zużycie gazu (przefiltrowane)',
+                            data: dailyGasUsage,
+                            borderColor: 'rgba(255, 159, 64, 1)',
+                            backgroundColor: 'rgba(255, 159, 64, 0.2)',
+                            fill: true,
+                        },
+                        {
+                            label: 'Dzienne zużycie prądu (przefiltrowane)',
+                            data: dailyElectricityUsage,
+                            borderColor: 'rgba(75, 192, 192, 1)',
                             backgroundColor: 'rgba(75, 192, 192, 0.2)',
                             fill: true,
                         }
