--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             margin: 0;
             padding: 0;
             color: black;
-            background: url('images/background.jpg') no-repeat center center fixed;
+            background: url('https://github.com/car0tek/liczniki/blob/main/DJI_0636.JPG') no-repeat center center fixed;
             background-size: cover;
             position: relative;
         }
